fix overlap

--- a/css/screen.css
+++ b/css/screen.css
@@ -42,7 +42,7 @@ a img, fieldset { border: none; }
 
 .mainslider { height: 325px; background: url(../img/supersot.png) no-repeat 515px 0px; position: absolute; top: 152px; left: 0px; width: 100%; }
 .mainslider .mainslider__slides { height: 303px; }
-.mainslider .mainslider__slide { height: 303px; width: 100%; float: left; }
+.mainslider .mainslider__slide { height: 303px; width: 100%; float: left; left: -5000px; position: absolute; }
 .mainslider .mainslider__slide .mainslider__pic { position: absolute; left: 136px; top: 0px; height: 303px; }
 .mainslider .mainslider__slide .mainslider__text { position: absolute; left: 626px; top: 40px; width: 356px; }
 .mainslider .mainslider__slide .mainslider__text h2 { font-size: 42px; font-family: "pbold", arial, sans-serif; color: #3b3b3b; text-transform: uppercase; line-height: 1; min-height: 1.6em; }
