--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -52,10 +52,13 @@
 	width: 100% 
 	.mainslider__slides
 		height: 303px 
+	
 	.mainslider__slide
 		height: 303px 
 		width: 100%
 		float: left 
+		left: -5000px 
+		position: absolute
 		.mainslider__pic
 			position: absolute
 			left: 136px 
